Created second class to test

--- a/force-app/main/default/classes/EntitySubscriptionController.cls
+++ b/force-app/main/default/classes/EntitySubscriptionController.cls
@@ -1,15 +1,16 @@
 public class EntitySubscriptionController {
   
+  // TODO add return type of List<SObject> when done
   public static void main(){
+  
   // Running user
     String userId = UserInfo.getUserId();
   
-
-  // Query entity subscriptions for the running user
     Id objectId;
     String objectName;
     Map<String, List<Id>> objectMap = new Map<String, List<Id>>();
 
+  // Query entity subscriptions for the running user
   List<EntitySubscription> entityList = [
     SELECT Id, SubscriberId, ParentId 
     FROM EntitySubscription 
@@ -17,6 +18,7 @@ public class EntitySubscriptionController {
     ORDER BY ParentId
     ];
 
+    // Loop over query and get Id and Type for the objects. Then add to the map.
   for(EntitySubscription sub: entityList){
     objectId = String.valueOf(sub.get('ParentId'));
     objectName = String.valueOf(objectId.getsobjecttype());
@@ -31,7 +33,9 @@ public class EntitySubscriptionController {
   System.debug('Object map values: ' +objectMap.values());
   
   // Query fields to be displayed to the user. Name field for most but handle the execptions if the object does not (ie Case).
+  
 
-
+  // TODO add in return info when done
+  // return
   }
 }
